--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,39 +1,41 @@
 ---
 layout: default
-isPost: true
-comment: true
 ---
-<article class="main-article main-article-page">
-    <div class="violet-title">
-        <h3 class="violet-title-item">{{ page.title }}</h3>
-    </div>
-    <div class="violet-post">
-        <p class="main-article-meta"><time pubdate="{{ rpost.date | date_to_utc | date: '%Y-%m-%d' }}">{{ page.date | date_to_utc | date: "%Y-%m-%d" }}</time></p>
-        <div class="main-article-contant">
-            {{ content }}
-        </div>
-    </div>
-</article>
-<nav class="pagination fn-clear" id="violet-paging">
-    <div class="pagination-list">
-        {% if page.previous %}
-        <a class="prev" href="{{ page.previous.url }}" rel="bookmark"><i class="fa fa-chevron-circle-left"></i>{{ page.previous.title | truncatewords:5 }}</a>
-        {% endif %}
-        {% if page.next %}
-        <a class="next" href="{{ page.next.url }}" rel="bookmark">{{ page.next.title | truncatewords:5 }}<i class="fa fa-chevron-circle-right"></i></a>
-        {% endif %}
-    </div>
-</nav>
-<div class="comment">
-    {% if site.disqus.config %}
-        <div class="comment-cnt">
-            <div id="disqus_thread"></div>
-        </div>
-    {% else %}
-        {% if site.duoshuo.config %}
-        <div class="comment-cnt">
-            <div class="ds-thread"></div>
-        </div>
-        {% endif %}
-    {% endif %}
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <div class="post-date">
+  <span><i class="fa fa-clock-o"></i> {{ page.date | date: "%Y-%m-%d"  }}</span>
+  <span class="extra-right"><i class="fa fa-tags"></i> {{ page.tags | array_to_sentence_string }}
+</span>
+  </div>
+  {{ content }}
 </div>
+    <div class="read-more">
+      {% if page.previous %}
+        <div class="list-item right">
+          <h4><a href="{{ page.previous.url }}" title="{{ page.previous.title }}">{{page.previous.title}} <i class="fa fa-arrow-circle-right"></i></a></h4>
+          <span><i class="fa fa-clock-o"></i>{{ page.previous.date | date: "%Y-%m-%d" }}</span>
+        </div><!-- /.read-more-previous -->
+      {% endif %}
+      {% if page.next %}
+        <div class="list-item left">
+          <h4><a href="{{ page.next.url }}" title="{{ page.next.title }}"><i class="fa fa-arrow-circle-left"> {{page.next.title}}</i></a></h4>
+          <span><i class="fa fa-clock-o"></i>{{ page.next.date | date: "%Y-%m-%d" }}</span>
+        </div><!-- /.read-more-next -->
+      {% endif %}
+    </div><!-- /.read-more -->
+    <!-- 多说评论框 start -->
+    <div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="{{ post.url }}"></div>
+    <!-- 多说评论框 end -->
+    <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+    <script type="text/javascript">
+    var duoshuoQuery = {short_name:"sunnyyoung"};
+     (function() {
+        var ds = document.createElement('script');
+        ds.type = 'text/javascript';ds.async = true;
+        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+        ds.charset = 'UTF-8';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+      })();
+    </script>
+<!-- 多说公共JS代码 end -->
