--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,11 +15,11 @@
     {% endif %}
   </title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="public/css/poole.min.css" >
-  <link rel="stylesheet" type="text/css" href="public/css/lanyon.min.css">
-  <link rel="stylesheet" type="text/css" href="public/css/pygment-github.min.css">
-  <link rel="stylesheet" type="text/css" href="public/css/font.min.css">  
-  <link rel="stylesheet" type="text/css" href="public/css/font-awesome.min.css">  
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}public/css/poole.min.css" >
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}public/css/lanyon.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}public/css/pygment-github.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}public/css/font.min.css">  
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}public/css/font-awesome.min.css">  
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.png">
   <!-- RSS -->
